tests/invalid/random_gauss_keyword_arg/main.py
import random

if __name__ == "__main__":
    x: float = random.gauss(mu=0.0, sigma=1.0)
